# bazel-cross-compile-rebuild

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl
.github/workflows/: ci.yml
pkg/demo/: BUILD.bazel  main.go
pkg/pb/: BUILD.bazel  some.proto
