load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "demo_lib",
    srcs = ["main.go"],
    importpath = "example.com/pkg/demo",
    visibility = ["//visibility:private"],
    deps = [
        "@com_google_firebase_go_v4//:go_default_library",
        "@dev_gocloud//blob:go_default_library",
    ],
)

go_binary(
    name = "demo",
    embed = [":demo_lib"],
    visibility = ["//visibility:public"],
)
