load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "demo_lib",
    srcs = ["main.go"],
    importpath = "example.com/pkg/demo",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_tools//go/analysis"],
)

go_binary(
    name = "demo",
    embed = [":demo_lib"],
    visibility = ["//visibility:public"],
)
