load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pb_proto",
    srcs = ["some.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/rpc:status_proto"],
)

go_proto_library(
    name = "pb_go_proto",
    importpath = "example.com/pkg/pb",
    proto = ":pb_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/rpc:status_go_proto"],
)
